--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,11 @@ pom.xml.next
 release.properties
 dependency-reduced-pom.xml
 buildNumber.properties
+/build/
+.checkstyle
+.classpath
+.fbExcludeFilterFile
+.pmd
+.pmdruleset.xml
+.project
+.settings
